test/cases/compile_errors/volatile_on_global_assembly.zig
comptime {
    asm volatile ("");
}

// error
// backend=stage2
// target=native
//
// :2:9: error: volatile is meaningless on global assembly
